--- a/src/components/AddNote/AddNote.module.scss
+++ b/src/components/AddNote/AddNote.module.scss
@@ -4,3 +4,9 @@
 .save {
   padding-left: 10px;
 }
+@media only screen and (max-width: 768px) {
+  .wrapper {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
