--- a/src/components/Listnote/Listnote.module.scss
+++ b/src/components/Listnote/Listnote.module.scss
@@ -13,3 +13,9 @@
 .empty {
   text-align: center;
 }
+@media only screen and (max-width: 768px) {
+  .note-list {
+    width: 100%;
+    margin-top: 30px;
+  }
+}
