--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   margin: 10px;
 }
+.form-group {
+  display: flex;
+  flex-direction: row;
+}
 .label {
   width: 100px;
 }
@@ -10,4 +14,10 @@
   margin-left: 5px;
   font-size: 14px;
   font-style: italic;
+}
+@media only screen and (max-width: 768px) {
+  .form-group {
+    display: flex;
+    flex-direction: column;
+  }
 }
