--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
-  position: relative;
+  // position: relative;
   width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  margin-top: 120px;
+  // margin-top: 120px;
   justify-content: center;
   background-color: aliceblue;
   padding: 30px;
@@ -19,4 +19,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+@media only screen and (max-width: 768px) {
+  .wrapper {
+    width: 100%;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+  }
 }
