--- a/src/components/Listnote/Listnote.module.scss
+++ b/src/components/Listnote/Listnote.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 20px;
   border: 2px solid greenyellow;
-  width: 500px;
+  width: 90%;
   max-height: 100%;
   border-radius: 8px;
 }
