--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -1,13 +1,20 @@
 .wrapper {
   display: flex;
   margin: 10px;
+  width: 100%;
 }
 .form-group {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  flex-grow: 1;
+  width: 100%;
+}
+.input-form {
+  width: 60%;
+  height: 24px;
 }
 .label {
-  width: 100px;
+  width: 30%;
 }
 .error {
   color: red;
@@ -19,5 +26,10 @@
   .form-group {
     display: flex;
     flex-direction: column;
+    width: 80%;
+  }
+  .input-form {
+    width: 100%;
+    height: 24px;
   }
 }
