--- a/src/components/Alert/Alert.module.scss
+++ b/src/components/Alert/Alert.module.scss
@@ -1,22 +1,18 @@
 .wrapper {
-  position: relative;
-  top: 10px;
-  left: 50;
   margin: 0 auto;
   text-align: center;
-  color: brown;
-  background-color: #fff;
-  padding: 20px;
+  color: rgb(255, 0, 0);
+  background-color: rgb(232, 232, 232);
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  // justify-content: space-between;
-  // width: 100%;
   border-radius: 10px;
   margin-bottom: 30px;
 }
 .title {
   margin-right: 40px;
+  font-size: 20px;
   width: 100%;
 }
 @media only screen and (max-width: 768px) {
