--- a/src/components/common/button/Button.module.scss
+++ b/src/components/common/button/Button.module.scss
@@ -8,7 +8,8 @@
   padding: 5px 18px;
   border-radius: 5px;
 }
-.del {
+.del,
+.edit {
   color: #333;
   font-size: 18px;
   transition: color 0.2s ease-in-out;
